more spacing fixes

--- a/styles/smallscreen.css
+++ b/styles/smallscreen.css
@@ -375,9 +375,10 @@ body,html{
   }
 
   .link-card-icon{
-    padding-top: 60px;
-    height: 140px;
-    width: 140px;
+    padding-top: 30px;
+    padding-bottom: 40px;
+    height: 110px;
+    width: 110px;
     color: white;
   }
 
@@ -427,9 +428,10 @@ body,html{
 
  #spotify-icon{
   padding-top: 0;
-  margin-top: 70px;
-  height: 130px;
-  width: 130px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  height: 140px;
+  width: 100px;
  }
 
 
